# alpha-analyst

./: .env.example  .gitignore  AlphaAnalyst.slnx  README.md  docker-compose.yml
.github/workflows/: gateway-ci.yml  ingestion-ci.yml  rag-hub-ci.yml
alpha-analyst-vsai/: README.md  agent.yaml  main.py  requirements.txt
alpha-analyst-vsai/.foundry/: .deployment.json
docs/: architecture.md
infrastructure/: main.bicep  main.bicepparam
shared/schemas/: insight.json  news_article.json  sec_filing.json
src/AlphaAnalyst.Gateway/: AlphaAnalyst.Gateway.http  Dockerfile  Program.cs  appsettings.json
src/AlphaAnalyst.Gateway/AlphaAnalyst.Gateway/: AlphaAnalyst.Gateway.http
src/AlphaAnalyst.Gateway/AlphaAnalyst.Gateway/Properties/: launchSettings.json
src/AlphaAnalyst.Gateway/Controllers/: AuditController.cs  InsightsController.cs
src/AlphaAnalyst.Gateway/Models/: AuditEntry.cs  Insight.cs
src/AlphaAnalyst.Gateway/Properties/: launchSettings.json
src/AlphaAnalyst.Ingestion/: AlphaAnalyst.Ingestion.csproj  Dockerfile  Program.cs  appsettings.json
src/AlphaAnalyst.Ingestion/AlphaAnalyst.Ingestion/: AlphaAnalyst.Ingestion.csproj  Program.cs  Worker.cs
src/AlphaAnalyst.Ingestion/Models/: NewsArticle.cs  SecFiling.cs
src/AlphaAnalyst.Ingestion/Properties/: launchSettings.json
src/AlphaAnalyst.Ingestion/Workers/: NewsWorker.cs  SecFilingWorker.cs
src/alpha_analyst_rag_hub/: .env  Dockerfile  deletebaddata.py  diagnostic.py  diagnostic2.py  download_filings.py  ingest.py  main.py  models.py  pyproject.toml
src/alpha_analyst_rag_hub/agents/: news_agent.py  sec_agent.py  synthesis_agent.py
src/alpha_analyst_rag_hub/chains/: retrieval_chain.py
src/alpha_analyst_rag_hub/eval/: ragas_eval.py
